--- a/src/weatherStyle.css
+++ b/src/weatherStyle.css
@@ -88,6 +88,11 @@ h3 {
 }
 .mainTemp {
   text-align: center;
+  font-size: 53px;
+  font-weight: 600 !important;
+}
+.weather-app-unit {
+  text-align: center;
   font-size: 23px;
   font-weight: 500 !important;
 }
@@ -96,7 +101,7 @@ h3 {
   width: 250px !important;
   position: absolute;
   left: 280px;
-  top: -140px;
+  top: -230px;
   text-align: center;
 }
 .weather-app-details {
