--- a/src/weatherStyle.css
+++ b/src/weatherStyle.css
@@ -5,14 +5,14 @@ body {
 }
 .weather-app {
   max-width: 600px;
-  margin: 30px auto;
+  margin: 10px auto;
   padding: 20px;
   box-shadow: 0 30px 50px rgba(16, 1, 5, 0.203);
   border-radius: 15px;
   background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
   background-size: 400% 400%;
   animation: gradient 50s ease infinite;
-  height: 100vh;
+  height: max-content;
   color: rgb(248, 246, 249);
 }
 
@@ -143,7 +143,9 @@ strong {
   opacity: 0.8;
 }
 .codedBy {
-  padding: 75px 0px;
+  max-width: 600px;
+  margin: 0px auto;
+  padding-left: 20px;
   color: black;
-  font-size: 12px;
+  font-size: 13px;
 }
